fix(css): asset alignment

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
   font-family: monospace;
   font-size: 1.2rem;
   position: relative;
-  right: 3rem;
+  right: 4rem;
   height: 300px;
   width: 300px;
   display: flex;
